@@ -453,23 +453,24 @@ double** starspan_getFeatureStats(
 	tr.addRaster(rast);
 	tr.setDesiredFID(FID);
 
+    double** result_stats = 0;
+    
 	FILE* file = 0;
 	vector<const char*> select_fields;
 	StatsObserver* statsObs = new StatsObserver(tr, file, select_stats, &select_fields);
-	if ( !statsObs )
-		return 0;
-	
-	// I want to keep the resulting stats arrays for the client
-	statsObs->releaseStats = false;
-	
-	tr.addObserver(statsObs);
-	tr.traverse();
-	
-	// take results:
-	double** result_stats = statsObs->result_stats;
-	
-	tr.releaseObservers();
-	
+	if ( statsObs ) {
+        // I want to keep the resulting stats arrays for the client
+        statsObs->releaseStats = false;
+        
+        tr.addObserver(statsObs);
+        tr.traverse();
+        
+        // take results:
+        double** result_stats = statsObs->result_stats;
+        
+        tr.releaseObservers();
+	}
+    
 	return result_stats;
 }
 
@@ -482,10 +483,6 @@ double** starspan_getFeatureStatsByField(
 	long *FID
 ) {
 	Traverser tr;
-	if ( globalOptions.pix_prop >= 0.0 )
-		tr.setPixelProportion(globalOptions.pix_prop);
-    
-    tr.setVectorSelectionParams(globalOptions.vSelParams);
     
 	tr.setVector(vect);
 	tr.addRaster(rast);
@@ -567,14 +564,8 @@ int starspan_stats(
 	tr.setVector(vect);
 	tr.setLayerNum(layernum);
 
-	if ( globalOptions.pix_prop >= 0.0 )
-		tr.setPixelProportion(globalOptions.pix_prop);
-    
-    tr.setVectorSelectionParams(globalOptions.vSelParams);
-    
 	if ( globalOptions.FID >= 0 )
 		tr.setDesiredFID(globalOptions.FID);
-	tr.setVerbose(globalOptions.verbose);
 	if ( globalOptions.progress ) {
 		tr.setProgress(globalOptions.progress_perc, cout);
 		cout << "Number of features: ";
@@ -585,8 +576,6 @@ int starspan_stats(
 			cout << "(not known in advance)";
 		cout<< endl;
 	}
-	tr.setSkipInvalidPolygons(globalOptions.skip_invalid_polys);
-	
 
 	StatsObserver obs(tr, file, select_stats, select_fields);
 	obs.closeFile = false;
