@@ -270,7 +270,7 @@ inline Polygon* create_pix_poly(double x0, double y0, double x1, double y1) {
 
 /**
   * A Traverser intersects every geometry feature in a vector datasource
-  * with a raster dataset. Observer should be registered for the
+  * with a raster dataset. Observers should be registered for the
   * actual work to be done.
   *
   * synopsis of usage:
@@ -284,11 +284,6 @@ inline Polygon* create_pix_poly(double x0, double y0, double x1, double y1) {
   *		tr.addRaster(r1);
   *		tr.addRaster(r2);
   *		...
-  *		
-  *		// optionally
-  *		tr.setPixelProportion(pp);
-  *		tr.setDesiredFID(fid);
-  *
   *		// add observers:  
   *		tr.addObserver(observer1);
   *		tr.addObserver(observer2);
@@ -355,23 +350,6 @@ public:
 	void removeRasters(void);
 	
 	/**
-	  * Sets the proportion of intersected area required for a pixel to be included.
-	  * This parameter is only used during processing of polygons.
-	  * By default, a point-in-poly criterion is used: if the polygon contains 
-	  * the upper left corner of the pixel, then the pixel is included.
-	  *
-	  * @param pixprop A value assumed to be in [0.0, 1.0].
-	  */
-	void setPixelProportion(double pixprop);
-
-	/**
-	  * Sets the vector selection parameters. 
-	  *
-	  * @param vsp the parameters.
-	  */
-    void setVectorSelectionParams(VectorSelectionParams vsp) { vSelParams = vsp; }
-
-	/**
 	  * Only the given FID will be processed.
 	  *
 	  * @param FID  a FID.
@@ -388,15 +366,6 @@ public:
 	  * @param field_value Value of the field
 	  */
 	void setDesiredFeatureByField(const char* field_name, const char* field_value);
-	
-	/**
-	  * Sets parameters to apply the buffer operation on geometry features
-	  * before computing the intersection.
-	  * By default, no buffer operation will be applied.
-	  *
-	  * @param bufferParams      See description in common.h
-	  */
-	void setBufferParameters(BufferParams bufferParams);
 	
 	
 	/**
@@ -467,26 +436,12 @@ public:
 	}
 	
 	/**
-	  * Sets verbose flag
-	  */
-	void setVerbose(bool v) { 
-		verbose = v;
-	}
-	
-	/**
 	  * Sets log output
 	  */
 	void setLog(ostream& log) { 
 		logstream = &log;
 	}
 	
-	/**
-	  * Sets if invalid polygons should be skipped.
-	  * By default all polygons are processed.
-	  */
-	void setSkipInvalidPolygons(bool b) { 
-		skip_invalid_polys = b;
-	}
 	
 	/**
 	  * Executes the traversal.
@@ -642,10 +597,6 @@ private:
 	vector<Observer*> observers;
 	bool notSimpleObserver;
 
-	double pixelProportion;
-    
-    VectorSelectionParams vSelParams;
-    
 	long desired_FID;
 	string desired_fieldName;
 	string desired_fieldValue;
@@ -735,16 +686,11 @@ private:
                                     
 	ostream* progress_out;
 	double progress_perc;
-	bool verbose;
 	ostream* logstream;
 	bool debug_dump_polys;
 	bool debug_no_spatial_filter;
-	bool skip_invalid_polys;
 	
 	WKTWriter wktWriter;
-
-	// buffer parameters
-	BufferParams bufferParams;
 };
 
 #endif
